<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soa" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sob" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kq" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Send" />
    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Send1" />
    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Send2" />
    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Send3" />
    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Send4" />
</LinearLayout>
